ZODB Requires:
~~~~~~~~~~~~~~
- Re-enter all properties whose names used to be *_str.

New features:
~~~~~~~~~~~~~
- Added isEditEntryAllowed to check for entry edit permission.
- Added Entry Local Roles, a way for ACLs to get additional computed roles.

Bug fixes:
~~~~~~~~~~
- LDAPDirectory now converts date fields between the LDAP time strings
  and DateTime objects.

New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Renamed writeEntry to editEntry.
- Renamed *_str properties to simpler names without _str suffix.